# gaki

./: README.md  meson.build
gaki/: action.c  action.h  file-info.c  file-info.h  file-panel.c  file-panel.h  gaki-config.h  gaki-state.c  gaki-state.h  gaki-sync.h  gaki.c  gaki.h  grind.sh  lut2.h  main.c  meson.build  nav-directory.c  nav-directory.h  nav-file-info.h  panel-directory.h  panel-file-info.h  panel-file.c  panel-file.h  panel-gaki.c  panel-gaki.h  panel-input.c  panel-input.h  test.c
subprojects/: .gitignore  rltui.wrap  rlwcwidth.wrap
